# pdf-manager

./: .gitignore  CMakeLists-static.txt  CMakeLists.txt  README.md  custom_button.cpp  main.cpp  main.h  pdfinfo.cpp  pdfinfo.h  pdfmanager.conf  run.bat
inc/: Prof.h  custom_button.hpp  custom_layout.hpp  pdfinfo.h  pdfmanager.hpp  pdfsearch.hpp  utils.hpp
src/: custom_button.cpp  custom_layout.cpp  main.cpp  pdfinfo.cpp  pdfmanager.cpp  pdfsearch.cpp  utils.cpp
tests/: SumatraPDF-settings.txt  run.bat  test.cpp
tests/catch2/: run.bat
